wedding page layout

--- a/events/events.css
+++ b/events/events.css
@@ -160,7 +160,7 @@ width:450px;
    /* border:1.5px solid rgb(234, 216, 216);*/
      /*making button trasparent*/
      background-color: transparent;
-     color: rgb(41, 10, 10); /* Set text color to white */
+     color:  rgb(53, 3, 26); /* Set text color 
      outline: none; /* Remove default outline */
      box-shadow: none; /* Remove any shadow */
      cursor: pointer; /* Add pointer on hover for better UX */
