--- a/ourstory/ourstory.css
+++ b/ourstory/ourstory.css
@@ -21,7 +21,7 @@ html,body{
     border:1.5px solid rgb(242, 207, 170);*/
      /*making button trasparent*/
      background-color: transparent;
-     color: rgb(41, 10, 10); /* Set text color to white */
+     color:  rgb(53, 3, 26); /* Set text color  */
      outline: none; /* Remove default outline */
      box-shadow: none; /* Remove any shadow */
      cursor: pointer; /* Add pointer on hover for better UX */
