wedding bg change

--- a/wedding/wedding.css
+++ b/wedding/wedding.css
@@ -75,7 +75,7 @@ body{
 {
     width:800px;
     height:800px;
-    background-image: url(./weddingbg.jpg);
+    background-image: url(./weddingbg2.png);
     background-repeat:no-repeat;
     background-position:center ;
     background-size:contain;
