--- a/events/events.css
+++ b/events/events.css
@@ -214,3 +214,78 @@ width:450px;
 {
     background-color:black;
 }
+
+
+
+/* Responsive Design */
+@media (max-width: 1024px) { /* Tablet Styles */
+    .content {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .haldi, .sangeet {
+        width: 80%;
+        margin: 0 auto;
+        left: 0;
+    }
+
+    .img {
+        position: relative;
+        left: 0;
+        text-align: center;
+    }
+
+    .desc1 {
+        font-size: 28px;
+    }
+
+    .desc2 {
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 768px) { /* Mobile Styles */
+    .topbar {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .topbarright {
+        position: relative;
+        right: 0;
+        margin-top: 10px;
+    }
+
+    .content {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .haldi, .sangeet {
+        width: 90%;
+        margin: 10px auto;
+    }
+
+    .desc1 {
+        font-size: 24px;
+    }
+
+    .desc2 {
+        font-size: 16px;
+    }
+
+    [type=button] {
+        padding: 10px;
+        font-size: 14px;
+    }
+
+    .bottom h4 {
+        font-size: 14px;
+    }
+
+    .img img {
+        width: 100%;
+        height: auto;
+    }
+}
