--- a/gallery/gallery.css
+++ b/gallery/gallery.css
@@ -216,3 +216,28 @@ button.Downloadbutt:hover {
     margin-right: 9px;
     transition-duration: 0.15s;
 }
+
+/* Mobile */
+@media (max-width: 480px) {
+    body {
+        background-size: cover;
+        background-position: center center;
+    }
+    .topbarright {
+        position: static;
+        margin-bottom: 10px;
+        text-align: center;
+    }
+    .quote h3, .name h1 {
+        font-size: 6vw;
+    }
+    .topbar {
+        flex-direction: column;
+        align-items: center;
+        padding: 5px;
+    }
+    .topbarleft {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+}
