--- a/ourstory/ourstory.css
+++ b/ourstory/ourstory.css
@@ -367,6 +367,31 @@ body{
   animation: moveLeftToRight 5s linear 1;
 }
 
+/* Mobile */
+@media (max-width: 480px) {
+  body {
+      background-size: cover;
+      background-position: center center;
+  }
+  .topbarright {
+      position: static;
+      margin-bottom: 10px;
+      text-align: center;
+  }
+  .quote h3, .name h1 {
+      font-size: 6vw;
+  }
+  .topbar {
+      flex-direction: column;
+      align-items: center;
+      padding: 5px;
+  }
+  .topbarleft {
+      flex-wrap: wrap;
+      justify-content: center;
+  }
+}
+
 
 
 
