--- a/thankyou/thankyou.css
+++ b/thankyou/thankyou.css
@@ -108,3 +108,29 @@ body{
     top:120px;
     font-size: 22px;;
   }
+
+
+  /* Mobile */
+@media (max-width: 480px) {
+  body {
+      background-size: cover;
+      background-position: center center;
+  }
+  .topbarright {
+      position: static;
+      margin-bottom: 10px;
+      text-align: center;
+  }
+  .quote h3, .name h1 {
+      font-size: 6vw;
+  }
+  .topbar {
+      flex-direction: column;
+      align-items: center;
+      padding: 5px;
+  }
+  .topbarleft {
+      flex-wrap: wrap;
+      justify-content: center;
+  }
+}
