--- a/wedding/wedding.css
+++ b/wedding/wedding.css
@@ -130,3 +130,29 @@ body{
     position: relative;
     left:25%;
   }
+
+
+  /* Mobile */
+@media (max-width: 480px) {
+    body {
+        background-size: cover;
+        background-position: center center;
+    }
+    .topbarright {
+        position: static;
+        margin-bottom: 10px;
+        text-align: center;
+    }
+    .quote h3, .name h1 {
+        font-size: 6vw;
+    }
+    .topbar {
+        flex-direction: column;
+        align-items: center;
+        padding: 5px;
+    }
+    .topbarleft {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+}
