--- a/thankyou/thankyou.css
+++ b/thankyou/thankyou.css
@@ -6,6 +6,8 @@ body{
     background-position:70% 30%;
     background-repeat: no-repeat; 
     text-align:center;
+    overflow-x: hidden;
+    min-height: 100vh;
 }
 .topbarleft
 {
