--- a/thankyou/thankyou.css
+++ b/thankyou/thankyou.css
@@ -1,129 +1,114 @@
-body{
-    background-image: url('./thankyoubg.jpeg ');
-    padding: 0;
-    margin: 0;
-    background-size: cover;
-    background-position:70% 30%;
-    background-repeat: no-repeat; 
-    text-align:center;
-    overflow-x: hidden;
-    min-height: 100vh;
+body {
+  background-image: url('./thankyoubg.jpeg');
+  padding: 0;
+  margin: 0;
+  background-size: cover; /* Ensures the image covers the entire screen */
+  background-position: center; /* Center aligns the background */
+  background-repeat: no-repeat;
+  text-align: center;
+  overflow-x: hidden;
+  min-height: 100vh;
 }
-.topbarleft
-{
-    display:flex;
-    flex-direction: row;  
+
+.topbarleft {
+  display: flex;
+  flex-direction: row;
 }
-[type=button]
-{
-    margin-left:8px;
-    margin-right:8px;
-    padding:12px;
-    border: 0;
-    border-radius: 5px;
-     /*making button trasparent*/
-     background-color: transparent;
-     color: white; /* Set text color to white */
-     outline: none; /* Remove default outline */
-     box-shadow: none; /* Remove any shadow */
-     cursor: pointer; /* Add pointer on hover for better UX */
+
+[type=button] {
+  margin-left: 8px;
+  margin-right: 8px;
+  padding: 12px;
+  border: 0;
+  border-radius: 5px;
+  background-color: transparent;
+  color: white;
+  outline: none;
+  box-shadow: none;
+  cursor: pointer;
 }
-[type=button]:hover
-{
-    background: #fff; 
+
+[type=button]:hover {
   background: rgba(255, 255, 255, 0.5);
   color: #000;
-    padding:13px;
-    margin-left:9px;
-    margin-right:9px;
-    
-    border:1px solid rgb(29, 28, 28);
-    box-shadow:  0 5px 5px rgba(0, 77, 77, 77);
-    transition-duration:0.15s;
-    
-
-}
-.thankq{
-    overflow-x:hidden;
-    color:rgb(1, 11, 11);
-    
+  padding: 13px;
+  margin-left: 9px;
+  margin-right: 9px;
+  border: 1px solid rgb(29, 28, 28);
+  box-shadow: 0 5px 5px rgba(0, 77, 77, 0.77);
+  transition-duration: 0.15s;
 }
 
-
-.topbarright
-{
-   
-    position: absolute;
-    right:2%;
-    margin-bottom:0px;   
-    padding-bottom:0px;
+.thankq {
+  overflow-x: hidden;
+  color: rgb(1, 11, 11);
 }
 
-.topbar
-{
-    display:flex;
-    flex-direction:row;
-   
-   
-    margin:0;
-    padding:15px;
-}
-.bottom{
-    text-align: center;
+.topbarright {
+  position: absolute;
+  right: 2%;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
 }
 
+.topbar {
+  display: flex;
+  flex-direction: row;
+  margin: 0;
+  padding: 15px;
+}
 
+.bottom {
+  text-align: center;
+}
 
-
-  .playfair-display-sc-black {
-    font-family: "Playfair Display SC", serif;
-    font-weight: 900;
-    font-style: normal;
-    font-size: 40px;
-    color:rgb(17, 16, 63);
-  }
- 
+.playfair-display-sc-black {
+  font-family: "Playfair Display SC", serif;
+  font-weight: 900;
+  font-style: normal;
+  font-size: 40px;
+  color: rgb(17, 16, 63);
+}
 
 .playfair-display-sc-black-itali {
   font-family: "Lora", serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-  font-size:25px ;
-  color:rgb(4, 15, 22)
+  font-size: 25px;
+  color: rgb(4, 15, 22);
 }
-  
-  
+
 .playfair-display-sc-black-italic {
-    font-family: "Lora", serif;
-    font-optical-sizing: auto;
-    font-weight: 600;
-    font-style: normal;
-    font-size:25px ;
+  font-family: "Lora", serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+  font-size: 25px;
+}
 
-  }
-  .adi
-  {
-    color:rgb(17, 16, 63);
-    position: relative;
-    left:40%;
-    top:120px;
-    font-size: 22px;;
-  }
+.adi {
+  color: rgb(17, 16, 63);
+  position: relative;
+  left: 40%;
+  top: 120px;
+  font-size: 22px;
+}
 
-
-  /* Mobile */
+/* Mobile adjustments */
 @media (max-width: 480px) {
   body {
       background-size: cover;
-      background-position: center center;
+      background-position: center;
+      min-height: 100vh; /* Ensure full height on smaller screens */
   }
   .topbarright {
       position: static;
       margin-bottom: 10px;
       text-align: center;
   }
-  .quote h3, .name h1 {
+  .quote h3,
+  .name h1 {
       font-size: 6vw;
   }
   .topbar {
