--- a/contactme/contact.css
+++ b/contactme/contact.css
@@ -195,7 +195,7 @@ text-align: center;
         }
         .address{
             position: relative;
-            right:20px;
+            left:50px;
         }
     
         .icon {
