--- a/contactme/contact.css
+++ b/contactme/contact.css
@@ -145,6 +145,8 @@ text-align: center;
     .flex {
         height: auto;
         padding: 20px 10px;
+       
+        
     }
 
     .address, .sendmesg {
@@ -195,7 +197,9 @@ text-align: center;
         }
         .address{
             position: relative;
-            left:50px;
+            right:5%;
+            grid-column-gap: 10px;
+            
         }
     
         .icon {
