--- a/thankyou/thankyou.css
+++ b/thankyou/thankyou.css
@@ -99,7 +99,7 @@ body {
 @media (max-width: 480px) {
   body {
       background-size: cover;
-      background-position: right;
+      background-position: calc(100% + 30px) center; 
       min-height: 100vh; /* Ensure full height on smaller screens */
   }
   .topbarright {
@@ -119,5 +119,8 @@ body {
   .topbarleft {
       flex-wrap: wrap;
       justify-content: center;
+  }
+  adi{
+    text-align: center;
   }
 }
