--- a/contactme/contact.css
+++ b/contactme/contact.css
@@ -197,8 +197,9 @@ text-align: center;
         }
         .address{
             position: relative;
-            left:10%;
+            left:30%;
             grid-column-gap: 10px;
+            margin:0;
             
         }
     
