--- a/contactme/contact.css
+++ b/contactme/contact.css
@@ -197,9 +197,10 @@ text-align: center;
         }
         .address{
             position: relative;
-            left:30%;
+            left:100px;;
             grid-column-gap: 10px;
             margin:0;
+            padding:0;
             
         }
     
