--- a/contactme/contact.css
+++ b/contactme/contact.css
@@ -208,7 +208,8 @@ text-align: center;
         }
     
         .sendmesg {
-            padding: 20px;
+            padding: 10px;
+            right:0;
         }
         .contact
         {
@@ -238,5 +239,14 @@ text-align: center;
          p{
         font-size: 12px;
          }
+         .sendmesg button {
+            width: calc(100% - 20px); /* Adjust button size for mobile screens */
+            margin: 10px auto;
+            padding: 12px;
+            font-size:16px;
+         }
+
+
+
 }
 
